Refactor SecurityConfig for improved CORS handling 1110